ops/k8s/sonarqube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarqube-ingress
  namespace: devsecops
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    # Shared ALB Group - Reuses your existing Load Balancer
    alb.ingress.kubernetes.io/group.name: "amazon-group"
    # IMPORTANT: Replace with your actual ACM ARN during deployment (managed by Terraform usually)
    alb.ingress.kubernetes.io/certificate-arn: 'arn:aws:acm:us-east-1:406312601212:certificate/d3295a68-4c22-4f92-af08-9cb09758966d'
spec:
  ingressClassName: alb
  rules:
    - host: sonarqube.devcloudproject.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarqube
                port:
                  number: 80
